--- a/GreenStore/Views/Account/_RemoveAccountPartial.cshtml
+++ b/GreenStore/Views/Account/_RemoveAccountPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection(GreenStore)<Microsoft.AspNet.Identity.UserLoginInfo>
+﻿@model ICollection<Microsoft.AspNet.Identity.UserLoginInfo>
 
 @if (Model.Count > 0)
 {
