--- a/GreenStore/Views/Account/Login.cshtml
+++ b/GreenStore/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
-@model GreenStore.Models.LoginViewModel
+﻿@model GreenStore.Models.LoginViewModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Đăng nhập";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -46,10 +46,10 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register a new user?", "Register")
+                    @Html.ActionLink("Đăng ký mới", "Register")
                 </p>
                 <p>
-                    @Html.ActionLink("Forget your password?", "ForgotPassword")
+                    @Html.ActionLink("Quên mật khẩu?", "ForgotPassword")
                 </p>
             }
         </section>
