--- a/GreenStore/Views/Account/Manage.cshtml
+++ b/GreenStore/Views/Account/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GreenStore.Models;
 @using Microsoft.AspNet.Identity;
 @{
-    ViewBag.Title = "Manage Account";
+    ViewBag.Title = "Quản lý tài khoản";
 }
 
 <h2>@ViewBag.Title.</h2>
