--- a/GreenStore/Views/Manage/GuestIndex.cshtml
+++ b/GreenStore/Views/Manage/GuestIndex.cshtml
@@ -33,11 +33,10 @@
                         <ul class="list-group">
                             <li class="list-group-item">
                                 <span class="badge">1</span>
-                                Your information will automatically get filled out when you order in the future.
+                                Thông tin của bạn sẽ được lưu để tiếp tục mua hàng.
                             </li>
                             <li class="list-group-item">
-                                <span class="badge">2</span>
-                                You will have a more convinent peersonilized experience.
+                                <span class="badge">2</span>Để trải nghiệm của bạn tốt hơn
                             </li>
                             <li class="list-group-item"><a href="javascript:document.getElementById('logoutForm').submit()">Log off and create your own account.</a></li>
                         </ul>
