--- a/GreenStore/Views/Shared/_Layout.cshtml
+++ b/GreenStore/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="~/Content/images/green.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Order Framework</title>
+    <title>@ViewBag.Title - Green Store</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="/Content/card.css">
@@ -42,9 +43,9 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Về chúng tôi<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                                        <li>@Html.ActionLink("Về chúng tôi", "About", "Home")</li>
                                         <li class="divider"></li>
-                                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                                        <li>@Html.ActionLink("Liên hệ", "Contact", "Home")</li>
                                     </ul>
                                 </li>
                             </ul>
