--- a/GreenStore/Views/ShoppingCart/CartSummary.cshtml
+++ b/GreenStore/Views/ShoppingCart/CartSummary.cshtml
@@ -1,1 +1,1 @@
-﻿<a href='@Url.Action("Index", "ShoppingCart")'><strong>Cart</strong>  <span id="cart-status" class="badge">@ViewData["CartCount"]</span></a>
+﻿<a href='@Url.Action("Index", "ShoppingCart")'><strong>Giỏ hàng</strong>  <span id="cart-status" class="badge">@ViewData["CartCount"]</span></a>
