--- a/GreenStore/Content/bootstrap.css
+++ b/GreenStore/Content/bootstrap.css
@@ -4019,7 +4019,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #ffffff;
 }
 .navbar-inverse {
-  background-color: #008cba;
+  background-color: #43ac6a;
   border-color: #006687;
 }
 .navbar-inverse .navbar-brand {
@@ -4032,6 +4032,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-inverse .navbar-text {
   color: #ffffff;
+}
+.navbar {
+    background-color: #39870C;
+    // kind af green
 }
 .navbar-inverse .navbar-nav > li > a {
   color: #ffffff;
