--- a/GreenStore/Views/Account/DisplayEmail.cshtml
+++ b/GreenStore/Views/Account/DisplayEmail.cshtml
@@ -3,5 +3,5 @@
 }
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    Please check your email and confirm your email address then login and complete your order.
+    Vui lòng check email
 </p>
