--- a/GreenStore/Views/Account/ExternalLoginFailure.cshtml
+++ b/GreenStore/Views/Account/ExternalLoginFailure.cshtml
@@ -4,5 +4,5 @@
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-error">Unsuccessful login with service.</h3>
+    <h3 class="text-error">Đăng nhập không thành công.</h3>
 </hgroup>
