--- a/GreenStore/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/GreenStore/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
-@{
-    ViewBag.Title = "Forgot Password Confirmation";
+﻿@{
+    ViewBag.Title = "Xác nhận thêm mật khẩu";
 }
 
 <hgroup class="title">
@@ -7,11 +7,10 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Vui lòng check email
     </p>
     <p class="text-danger">
-        For DEMO only: You can click this link to reset password: <a href="@ViewBag.Link">link</a>
-        Please change this code to register an email service in IdentityConfig to send an email.
+        Click vào <a href="@ViewBag.Link">đây</a> để đổi mật khẩu
     </p>
 </div>
 
