--- a/GreenStore/Views/Account/ResetPassword.cshtml
+++ b/GreenStore/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GreenStore.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Đôi mật khẩu";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="submit" class="btn btn-default" value="Xác nhận" />
         </div>
     </div>
 }
