--- a/GreenStore/Views/Account/SendCode.cshtml
+++ b/GreenStore/Views/Account/SendCode.cshtml
@@ -1,6 +1,6 @@
-@model GreenStore.Models.SendCodeViewModel
+﻿@model GreenStore.Models.SendCodeViewModel
 @{
-    ViewBag.Title = "Send Verification Code";
+    ViewBag.Title = "Gửi mã xác nhận";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -11,7 +11,7 @@
         <div class="col-md-8">
             Two Factor Authentication Provider:
             @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-            <input type="submit" value="Submit" class="btn btn-default" />
+            <input type="submit" value="Xác nhận" class="btn btn-default" />
         </div>
     </div>
 }
