--- a/GreenStore/Views/Account/_ChangePasswordPartial.cshtml
+++ b/GreenStore/Views/Account/_ChangePasswordPartial.cshtml
@@ -6,7 +6,7 @@
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
 @Html.AntiForgeryToken()
-                <h4>Change Password Form</h4>
+                <h4>Đổi mật khẩu</h4>
                                 <hr />
                                                 @Html.ValidationSummary("", new { @class = "text-danger" })
                                                                 <div class="form-group">
