--- a/GreenStore/Views/Account/_SetPasswordPartial.cshtml
+++ b/GreenStore/Views/Account/_SetPasswordPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿@model GreenStore.Models.ManageUserViewModel
 
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Đăng ký tài khoản
 </p>
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -26,7 +25,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
+            <input type="submit" value="Lưu mật khẩu" class="btn btn-default" />
         </div>
     </div>
 }
