--- a/GreenStore/Views/Analytics/Details.cshtml
+++ b/GreenStore/Views/Analytics/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GreenStore.Models.Order
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Chi tiết sản phẩm";
 }
 
 <h2>Details</h2>
@@ -50,7 +50,7 @@
             @Html.DisplayFor(model => model.State)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.PostalCode)
         </dt>
 
@@ -64,7 +64,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Country)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Phone)
@@ -74,13 +74,13 @@
             @Html.DisplayFor(model => model.Phone)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Experation)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Experation)
-        </dd>
+            @Html.DisplayFor(model => model.Experation)*@
+        <!--</dd>-->
 
         <dt>
             @Html.DisplayNameFor(model => model.SaveInfo)
