--- a/GreenStore/Views/Items/Details.cshtml
+++ b/GreenStore/Views/Items/Details.cshtml
@@ -29,22 +29,22 @@
 
     <div aria-hidden="true" class="alert alert-dismissable alert-success">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong>An item was added to your cart.</strong> To check out now simply <a href="#" class="alert-link">click here</a>.
+        <strong>Đã thêm sản phẩm vào giỏ hàng.</strong> Tìm thêm sản phẩm <a href="#" class="alert-link">Thanh toán</a>.
     </div>
 
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">Confirm check out.</h4>
+                <h4 class="modal-title">Xác nhận thanh toán</h4>
             </div>
             <div class="modal-body">
-                <p>Would you like to check out or keep shopping?</p>
+                <p>Tiếp tục đến giỏ hàng hoặc tìm thêm sản phẩm khác?</p>
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Continue</button>
-                <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "ShoppingCart")'">Check Out</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Tiếp tục</button>
+                <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "ShoppingCart")'">Thanh toán</button>
             </div>
         </div>
     </div>
@@ -54,10 +54,10 @@
 
 
 
-<h2>Details</h2>
+<h2>Chi tiết sản phẩm</h2>
 
 <div>
-    <h4>Item</h4>
+    <h4>Sản phẩm</h4>
     <hr />
     <dl class="dl-horizontal">
         <img src="@Url.Action("RenderImage", new { id = Model.ID})" />
@@ -100,8 +100,7 @@
 <p>
     <a href="#" class="AddLink"
        data-id="@Model.ID" data-toggle="modal" data-target="#myModal">
-        Add
-        to cart
+        Thêm vào giỏ hàng
     </a>
     @if (Request.IsAuthenticated && User.IsInRole("Admin"))
     {
