--- a/GreenStore/Views/Manage/AddPhoneNumber.cshtml
+++ b/GreenStore/Views/Manage/AddPhoneNumber.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GreenStore.Models.AddPhoneNumberViewModel
 @{
-    ViewBag.Title = "Add Phone Number";
+    ViewBag.Title = "Thêm số điẹn thoại";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -17,11 +17,11 @@
             @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Send verification code" />
         </div>
-    </div>
+    </div>*@
 }
 
 @section Scripts {
