--- a/GreenStore/Views/Manage/SetPassword.cshtml
+++ b/GreenStore/Views/Manage/SetPassword.cshtml
@@ -1,15 +1,14 @@
-@model GreenStore.Models.SetPasswordViewModel
+﻿@model GreenStore.Models.SetPasswordViewModel
 
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Chưa có tài khoản? Đăng nhập với tư cách Khách...
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4>Tạo tài khoản</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -26,7 +25,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
+            <input type="submit" value="Tạo mật khẩu" class="btn btn-default" />
         </div>
     </div>
 }
