--- a/GreenStore/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/GreenStore/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-@model GreenStore.Models.VerifyPhoneNumberViewModel
+﻿@model GreenStore.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Xác nhận" />
         </div>
     </div>
 }
