--- a/GreenStore/Views/Orders/Create.cshtml
+++ b/GreenStore/Views/Orders/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Thêm";
 }
 
-<h2>Create</h2>
+<h2>Thêm đơn hàng</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Order</h4>
+        <h4>Đặt hàng</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -107,7 +107,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Tạo đơn hàng" class="btn btn-default" />
             </div>
         </div>
     </div>
