--- a/GreenStore/Views/Orders/Delete.cshtml
+++ b/GreenStore/Views/Orders/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Xóa đơn hàng</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa đơn hàng</h3>
 <div>
-    <h4>Order</h4>
+    <h4>Đặt hangf</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -51,7 +51,7 @@
             @Html.DisplayFor(model => model.State)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.PostalCode)
         </dt>
 
@@ -65,7 +65,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Country)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Phone)
@@ -75,13 +75,13 @@
             @Html.DisplayFor(model => model.Phone)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Experation)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Experation)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.SaveInfo)
@@ -106,7 +106,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Tiếp tục mua sắm", "Index")
         </div>
     }
 </div>
