--- a/GreenStore/Views/Orders/Index.cshtml
+++ b/GreenStore/Views/Orders/Index.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Orders Main</h2>
+<h2>ĐẶT HÀNG</h2>
 
 <div class="bs-docs-section">
     <div class="row">
@@ -30,7 +30,7 @@
 
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Thêm mới", "Create")
 </p>
 <table class="table table-striped table-hover">
     <tr>
@@ -38,28 +38,28 @@
             @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            Last Name
+            Tên
         </th>
         <th>
-            @Html.ActionLink("Order Total", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
+            @Html.ActionLink("Só đơn đặt hàng", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            Address
+            Địa chỉ
         </th>
         <th>
-            City
+            Thành phố
         </th>
         <th>
-            State
+            Quận
         </th>
-        <th>
+        @*<th>
             Postal Code
         </th>
         <th>
             Country
-        </th>
+        </th>*@
         <th>
-            Phone
+            Điện thoại
         </th>
         <th>
             Email
@@ -88,12 +88,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.State)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.PostalCode)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Country)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Phone)
             </td>
@@ -101,9 +101,9 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.OrderId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.OrderId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.OrderId })
+                @Html.ActionLink("Chỉnh sửa đơn hàng", "Edit", new { id = item.OrderId }) |
+                @Html.ActionLink("Chi tiết", "Details", new { id = item.OrderId }) |
+                @Html.ActionLink("Hủy đơn hàng", "Delete", new { id = item.OrderId })
             </td>
         </tr>
     }
