--- a/GreenStore/Views/RolesAdmin/Delete.cshtml
+++ b/GreenStore/Views/RolesAdmin/Delete.cshtml
@@ -1,15 +1,15 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Xóa";
 }
 
-<h2>Delete.</h2>
+<h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this Role? </h3>
-<p>Deleting this Role will remove all users from this role. It will not delete the users.</p>
+<h3>Bạn có muốn xóa chức vụ </h3>
+@*<p>Deleting this Role will remove all users from this role. It will not delete the users.</p>*@
 <div>
-    <h4>Role.</h4>
+    <h4>Chức vụ.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,7 +26,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Quay lại", "Index")
         </div>
     }
 </div>
