--- a/GreenStore/Views/RolesAdmin/Details.cshtml
+++ b/GreenStore/Views/RolesAdmin/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Chi tiết";
 }
 
-<h2>Details.</h2>
+<h2>Chi tiết chức vụ.</h2>
 
 <div>
-    <h4>Roles.</h4>
+    <h4>Chức vụ.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -18,11 +18,11 @@
         </dd>
     </dl>
 </div>
-<h4>List of users in this role</h4>
+<h4>Danh sách</h4>
 @if (ViewBag.UserCount == 0)
 {
     <hr />
-    <p>No users found in this role.</p>
+    <p>Không có người dùng</p>
 }
 
 <table class="table">
@@ -37,8 +37,8 @@
     }
 </table>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Sửa", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Quay lại", "Index")
 </p>
 
 
