--- a/GreenStore/Views/ShoppingCart/Index.cshtml
+++ b/GreenStore/Views/ShoppingCart/Index.cshtml
@@ -30,7 +30,7 @@
     });
 </script>
 <h3>
-    <em>Xem</em> giở hàng của bạn:
+    Giỏ hàng của bạn:
 </h3>
 
 @{
@@ -39,7 +39,7 @@
     {
         <div class="panel panel-info">
             <div class="panel-heading">
-                <h3 class="panel-title">Order Summary</h3>
+                <h3 class="panel-title">Thông tin đơn hàng</h3>
             </div>
             <div class="panel-body">
 
@@ -75,15 +75,14 @@
                             <td>
                                 <a href="#" class="RemoveLink"
                                    data-id="@item.ItemId">
-                                    Xóa
-                                    khỏi giỏ hàng
+                                    Xóa khỏi giỏ hàng
                                 </a>
                             </td>
                         </tr>
                     }
                     <tr class="info">
                         <td>
-                            Total
+                            Tổng tiền
                         </td>
                         <td></td>
                         <td></td>
@@ -93,7 +92,7 @@
                     </tr>
                 </table>
                 <button type="button" class="btn btn-success btn-sm" onclick="location.href='@Url.Action("AddressAndPayment", "Checkout")'">
-                    Check Out &raquo;
+                    Xác nhận thanh toán &raquo;
                 </button>
             </div>
         </div>
@@ -102,7 +101,7 @@
     {
         <div>
             <p>
-                There are no items in your cart currently. Please shop for something and add items..
+                Không có sản phẩm nào, hãy thêm sản phẩm vào giở hàng...
             </p>
         </div>
     }
