--- a/GreenStore/Views/Account/DisplayEmail.cshtml
+++ b/GreenStore/Views/Account/DisplayEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Đơn hàng của bạn chưa hoàn tất...";
+    ViewBag.Title = "Bạn đã đăng ký thành công hãy đăng nhập để tiếp tục mua sắm...";
 }
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    Vui lòng check email
+    
 </p>
