--- a/GreenStore/Views/Items/Details.cshtml
+++ b/GreenStore/Views/Items/Details.cshtml
@@ -108,5 +108,5 @@
         
     }
      
-    @Html.ActionLink("Quay lại danh sách sản phẩm", "Index")
+    <a>|</a> @Html.ActionLink("Quay lại danh sách sản phẩm", "Index")
 </p>
