--- a/GreenStore/Views/Manage/GuestIndex.cshtml
+++ b/GreenStore/Views/Manage/GuestIndex.cshtml
@@ -38,7 +38,7 @@
                             <li class="list-group-item">
                                 <span class="badge">2</span>Để trải nghiệm của bạn tốt hơn
                             </li>
-                            <li class="list-group-item"><a href="javascript:document.getElementById('logoutForm').submit()">Log off and create your own account.</a></li>
+                            <li class="list-group-item"><a href="javascript:document.getElementById('logoutForm').submit()">Đăng xuất và tạo tài khoản của bạn</a></li>
                         </ul>
                     </div>
                 </div>
