--- a/GreenStore/Views/RolesAdmin/Create.cshtml
+++ b/GreenStore/Views/RolesAdmin/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Role.</h4>
+        <h4>Thêm chi tiết chức vụ</h4>
         <hr />
         @Html.ValidationSummary(true)
 
