--- a/GreenStore/Content/bootstrap.css
+++ b/GreenStore/Content/bootstrap.css
@@ -5797,6 +5797,9 @@ button.close {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a {
+    color: #34b626;
+}
 .navbar .btn {
   padding-top: 6px;
   padding-bottom: 6px;
