--- a/GreenStore/Views/Account/GuestLogin.cshtml
+++ b/GreenStore/Views/Account/GuestLogin.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GreenStore.Models.GuestViewModel
 @using Microsoft.Owin.Security
 
-<h4>Login as a Guest</h4>
+<h4>Đăng nhập với tư cách Khách</h4>
 <hr />
 @using (Html.BeginForm("GuestLogin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post))
 {
@@ -11,7 +11,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guest Checkout" class="btn btn-default" />
+                <input type="submit" value="Mua hàng không cần tài khoản" class="btn btn-default" />
             </div>
         </div>
 }
