--- a/GreenStore/Views/Catagories/Delete.cshtml
+++ b/GreenStore/Views/Catagories/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Xóa sản phẩm</h2>
 
 <h3>Bạn có muốn xóa loại hàng này?</h3>
 <div>
@@ -25,8 +25,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Quay lại", "Index")
         </div>
     }
 </div>
