--- a/GreenStore/Views/Items/Index.cshtml
+++ b/GreenStore/Views/Items/Index.cshtml
@@ -114,14 +114,13 @@
             <td>
                 <a href="#" class="AddLink"
                    data-id="@item.ID" data-toggle="modal" data-target="#myModal">
-                    Add
-                    to cart
+                                   
                 </a>
-                <!--@Html.ActionLink("Thêm vào giỏ hàng", "AddToCart", "ShoppingCart", new { id = item.ID }, new { htmlAttributes = new { @data_toggle = "modal", @data_target = "#myModal" } })--> |
-                @Html.ActionLink("Chi tiết sản phẩm", "Details", new { id = item.ID })
+                @Html.ActionLink("Thêm vào giỏ hàng", "AddToCart", "ShoppingCart", new { id = item.ID }, new { htmlAttributes = new { @data_toggle = "modal", @data_target = "#myModal" } }) |
+                @Html.ActionLink("Chi tiết sản phẩm", "Details", new { id = item.ID }) <a> | </a>
                 @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                 {
-                    @Html.ActionLink("Sửa", "Edit", new { id = item.ID })
+                    @Html.ActionLink("Sửa", "Edit", new { id = item.ID })	<a>|</a>
                     @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
                 }
             </td>
