--- a/GreenStore/Views/RolesAdmin/Delete.cshtml
+++ b/GreenStore/Views/RolesAdmin/Delete.cshtml
@@ -4,16 +4,16 @@
     ViewBag.Title = "Xóa";
 }
 
-<h2>Xóa</h2>
+<h2>Xóa chức vụ</h2>
 
-<h3>Bạn có muốn xóa chức vụ </h3>
+<h3>Bạn có muốn xóa chức vụ?</h3>
 @*<p>Deleting this Role will remove all users from this role. It will not delete the users.</p>*@
 <div>
     <h4>Chức vụ.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @*@Html.DisplayNameFor(model => model.Name)*@Tên chức vụ
         </dt>
 
         <dd>
@@ -25,7 +25,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Xác nhận xóa" class="btn btn-default" /> |
             @Html.ActionLink("Quay lại", "Index")
         </div>
     }
