--- a/GreenStore/Views/Shared/_Layout.cshtml
+++ b/GreenStore/Views/Shared/_Layout.cshtml
@@ -27,15 +27,15 @@
                                 @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                                 {
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Area <b class="caret"></b></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quản lý<b class="caret"></b></a>
                                         <ul class="dropdown-menu">
-                                            <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
-                                            <li>@Html.ActionLink("Catagorie", "Index", "Catagories")</li>
-                                            <li>@Html.ActionLink("Analytics", "Index", "Analytics")</li>
+                                            <li>@Html.ActionLink("Đơn hàng", "Index", "Orders")</li>
+                                            <li>@Html.ActionLink("Loại hàng", "Index", "Catagories")</li>
+                                            @*<li>@Html.ActionLink("Phân tích", "Index", "Analytics")</li>*@
                                             <li class="divider"></li>
                                             <li class="dropdown-header">Roles Admin</li>
-                                            <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
-                                            <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
+                                            <li>@Html.ActionLink("Quản lý tài khoản quản trị", "Index", "RolesAdmin")</li>
+                                            <li>@Html.ActionLink("Quản lý người dùng", "Index", "UsersAdmin")</li>
                                         </ul>
                                     </li>
                                 }
