--- a/GreenStore/Views/UsersAdmin/Create.cshtml
+++ b/GreenStore/Views/UsersAdmin/Create.cshtml
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">
-            Select User Role
+            Chọn vai trò
         </label>
         <div class="col-md-10">
             @foreach (var item in (SelectList)ViewBag.RoleId)
