--- a/GreenStore/Views/UsersAdmin/Delete.cshtml
+++ b/GreenStore/Views/UsersAdmin/Delete.cshtml
@@ -1,18 +1,18 @@
 ﻿@model GreenStore.Models.ApplicationUser
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Xóa người dùng";
 }
 
-<h2>Delete.</h2>
+<h2>Xóa người dùng</h2>
 
-<h3>Are you sure you want to delete this User?</h3>
+<h3>Bạn có muốn xóa người dùng này?</h3>
 <div>
-    <h4>User.</h4>
+    @*<h4>User.</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            @*@Html.DisplayNameFor(model => model.UserName)*@ Tên người dùng
         </dt>
 
         <dd>
@@ -24,7 +24,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Xác nhận xóa" class="btn btn-default" /> |
             @Html.ActionLink("Quay lại", "Index")
         </div>
     }
