--- a/GreenStore/Views/UsersAdmin/Edit.cshtml
+++ b/GreenStore/Views/UsersAdmin/Edit.cshtml
@@ -1,17 +1,17 @@
 ﻿@model GreenStore.Models.EditUserViewModel
 
 @{
-    ViewBag.Title = "Sửa";
+    ViewBag.Title = "Sửa thông tin người dùng";
 }
 
-<h2>Edit.</h2>
+<h2>Sửa thông tin người dùng</h2>
 
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Edit User Form.</h4>
+        <h4>Sửa thông tin chi tiết</h4>
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("Roles", new { @class = "control-label col-md-2" })
+            @Html.Label("Vai trò", new { @class = "control-label col-md-2" })
             <span class=" col-md-10">
                 @foreach (var item in Model.RolesList)
                 {
@@ -36,7 +36,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Lưu lại" class="btn btn-default" />
             </div>
         </div>
     </div>
