--- a/GreenStore/Views/UsersAdmin/Index.cshtml
+++ b/GreenStore/Views/UsersAdmin/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GreenStore.Models.ApplicationUser>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Quản lý người dùng";
 }
 
-<h2>Index</h2>
+<h2>Quản lý người dùng</h2>
 
 <p>
     @Html.ActionLink("Thêm tài khoản quản trị", "Create")
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            @*@Html.DisplayNameFor(model => model.UserName)*@ Tên
         </th>
         <th>
 
