--- a/GreenStore/Views/Orders/Create.cshtml
+++ b/GreenStore/Views/Orders/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GreenStore.Models.Order
 
 @{
-    ViewBag.Title = "Thêm";
+    ViewBag.Title = "Create";
 }
 
 <h2>Thêm đơn hàng</h2>
@@ -114,7 +114,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </div>
 
 @section Scripts {
