--- a/GreenStore/Views/Orders/Delete.cshtml
+++ b/GreenStore/Views/Orders/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Bạn có muốn xóa đơn hàng</h3>
 <div>
-    <h4>Đặt hangf</h4>
+    <h4>Đặt hàng</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -105,7 +105,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Xác nhận hủy đơn" class="btn btn-default" /> |
             @Html.ActionLink("Tiếp tục mua sắm", "Index")
         </div>
     }
