--- a/GreenStore/Views/Items/Create.cshtml
+++ b/GreenStore/Views/Items/Create.cshtml
@@ -2,7 +2,7 @@
 @using GreenStore.Extensions
 
 @{
-    ViewBag.Title = "Thêm sản phẩm";
+    ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Sn phẩm</h4>
+        <h4>Item</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -49,7 +49,7 @@
         </div>
 
         <div class="editor-label">
-            Tải ảnh lên
+            Upload Image
         </div>
         <div class="editor-field">
             @Html.FileFor(model => model.File)
@@ -58,14 +58,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Lưu" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Quay lại danh sách sản phẩm", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
