--- a/GreenStore/Views/Items/Delete.cshtml
+++ b/GreenStore/Views/Items/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GreenStore.Models.Item
 
 @{
-    ViewBag.Title = "Xóa sản phẩm";
+    ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
 
-<h3>Bạn cớ muốn xóa sản phẩm này không?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Sản phẩm</h4>
+    <h4>Item</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Quay lại danh sách sản phẩm", "Index")
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
