--- a/GreenStore/Views/Items/Edit.cshtml
+++ b/GreenStore/Views/Items/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GreenStore.Models.Item
 
 @{
-    ViewBag.Title = "Sửa sản phẩm";
+    ViewBag.Title = "Edit";
 }
 
 <h2>Edit</h2>
@@ -50,14 +50,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Lưu" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Quay lại danh sách sản phẩm", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
