--- a/GreenStore/Views/Items/Index.cshtml
+++ b/GreenStore/Views/Items/Index.cshtml
@@ -3,7 +3,7 @@
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "Danh sách sản phẩm";
+    ViewBag.Title = "Food";
 }
 
 
@@ -31,7 +31,7 @@
 
     <div aria-hidden="true" class="alert alert-dismissable alert-success">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong>Đã thêm sản phẩm vào giỏ hàng.</strong> Để thanh toán vui lòng <a href="#" class="alert-link">click vào đây</a>.
+        <strong>Đã thêm sản phẩm vào giỏ hàng.</strong> Để thanh tóán vui lòng <a href="#" class="alert-link">click vào đay</a>.
     </div>
 
     <div class="modal-dialog">
@@ -41,11 +41,11 @@
                 <h4 class="modal-title">Xác nhận thanh toán.</h4>
             </div>
             <div class="modal-body">
-                <p>Bạn có muốn tìm thêm hàng không</p>
+                <p>Bạn có muốn tìm thêm sản phẩm khác?</p>
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"  data-dismiss="modal">Tìm thêm sản phẩm</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Tìm  thêm sản phẩm khác</button>
                 <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "ShoppingCart")'">Tiếp tục thanh toán</button>
             </div>
         </div>
@@ -55,11 +55,11 @@
 
 
 
-<h2>Hãy tìm và chọn sản phẩm bạn thích</h2>
+<h2>Chọn món hàng mà bạn thích</h2>
 @if (Request.IsAuthenticated && User.IsInRole("Admin"))
 {
     <p>
-        @Html.ActionLink("Thêm mới sản phẩm", "Create")
+        @Html.ActionLink("Create New", "Create")
     </p>
 }
 <div class="bs-docs-section">
@@ -69,10 +69,10 @@
                 
                 <div class="form-group">
                     <div class="input-group">
-                        <span class="input-group-addon">Tìm sản phẩm: </span>
+                        <span class="input-group-addon">Tìm kiếm: </span>
                         @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
                         <span class="input-group-btn">
-                            <input type="submit" class="btn btn-info btn-sm" value="Tìm kiếm" />
+                            <input type="submit" class="btn btn-info btn-sm" value="Tìm" />
                         </span>
                     </div>
                 </div>
@@ -85,10 +85,10 @@
             Loại hàng
         </th>
         <th>
-            @Html.ActionLink("Tên sản phẩm", "Index" , new { sortOrder=ViewBag.NameSortParm, currentFilter=ViewBag.CurrentFilter })
+            @Html.ActionLink("Tên sản phẩm", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.ActionLink("Giá", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
+            @Html.ActionLink("Đơn giá", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
             Hình ảnh
@@ -114,14 +114,15 @@
             <td>
                 <a href="#" class="AddLink"
                    data-id="@item.ID" data-toggle="modal" data-target="#myModal">
-                                   
+                    Add
+                    to cart
                 </a>
-                @Html.ActionLink("Thêm vào giỏ hàng", "AddToCart", "ShoppingCart", new { id = item.ID }, new { htmlAttributes = new { @data_toggle = "modal", @data_target = "#myModal" } }) |
-                @Html.ActionLink("Chi tiết sản phẩm", "Details", new { id = item.ID }) <a> | </a>
+                <!--@Html.ActionLink("Add to cart", "AddToCart", "ShoppingCart", new { id = item.ID }, new { htmlAttributes = new { @data_toggle = "modal", @data_target = "#myModal" } })--> |
+                @Html.ActionLink("Details", "Details", new { id = item.ID })
                 @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                 {
-                    @Html.ActionLink("Sửa", "Edit", new { id = item.ID })	<a>|</a>
-                    @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
                 }
             </td>
         </tr>
