--- a/GreenStore/Views/Shared/_Layout.cshtml
+++ b/GreenStore/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            @Html.ActionLink("GREEN SHOP", "Index", "Home", null, new { @class = "navbar-brand" })
+                            @Html.ActionLink("GREEN STORE", "Index", "Home", null, new { @class = "navbar-brand" })
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
