--- a/GreenStore/Views/Store/Browse.cshtml
+++ b/GreenStore/Views/Store/Browse.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GreenStore.Models.Catagorie
 
 @{
-    ViewBag.Title = "Tìm sản phẩm";
+    ViewBag.Title = "Browse Items";
 }
 
 <div class="genre">
@@ -11,7 +11,7 @@
         @foreach (var item in Model.Items)
         {
             <li>
-                <a href="@Url.Action("Chi tiết sản phẩm", new { id = item.ID })">
+                <a href="@Url.Action("Details", new { id = item.ID })">
                     <img alt="@item.Name" src="@item.ItemPictureUrl" />
                     <span>@item.Name</span>
                 </a>
