--- a/GreenStore/Views/Orders/Index.cshtml
+++ b/GreenStore/Views/Orders/Index.cshtml
@@ -35,13 +35,13 @@
 <table class="table table-striped table-hover">
     <tr>
         <th>
-            @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
+            @Html.ActionLink("Họ va tên đệm", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
             Tên
         </th>
         <th>
-            @Html.ActionLink("Só đơn đặt hàng", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
+            @Html.ActionLink("Tong tiền", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
             Địa chỉ
