--- a/GreenStore/Views/Items/Create.cshtml
+++ b/GreenStore/Views/Items/Create.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Thêm sản phẩm</h2>
 
 
 @using (Html.BeginForm("Create", "Items", FormMethod.Post, new { enctype = "multipart/form-data" })) 
@@ -13,11 +13,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Item</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.CatagorieId, "CatagorieId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CatagorieId, "Loại hàng", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CatagorieId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CatagorieId, "", new { @class = "text-danger" })
@@ -49,7 +49,7 @@
         </div>
 
         <div class="editor-label">
-            Upload Image
+            Tải ảnh lên
         </div>
         <div class="editor-field">
             @Html.FileFor(model => model.File)
@@ -58,14 +58,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Thêm" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </div>
 
 @section Scripts {
