Update index Home

--- a/GreenStore/Views/Home/Index.cshtml
+++ b/GreenStore/Views/Home/Index.cshtml
@@ -40,12 +40,17 @@
     </div>
     <br />
     <div class="col-md-4">
-        <img src="~/Content/images/hanhla.jpeg" alt="Hành lá" width="200"
+        <img src="~/Content/images/banhmi.jpg" alt="Hành lá" width="200"
              height="100">
     </div>
     <br />
     <div class="col-md-4">
-        <img src="~/Content/images/hanhla.jpeg" alt="Hành lá" width="200"
+        <img src="~/Content/images/banhmi.jpg" alt="Hành lá" width="200"
+             height="100">
+    </div>
+    <br />
+    <div class="col-md-4">
+        <img src="~/Content/images/banhmi.jpg" alt="Hành lá" width="200"
              height="100">
     </div>
 
